--- a/.wgetrc
+++ b/.wgetrc
@@ -1,3 +1,6 @@
+# WGET default options
+# see https://www.gnu.org/software/wget/manual/html_node/Wgetrc-Commands.html
+
 # Use the server-provided last modification date, if available
 timestamping = on
 
